--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="author" content="Sammi Kwiatkowski">
         <meta name="description" content="This is the homepage for an Asian restaurant.">
         <link rel="stylesheet" href="styles.css">
-        <link rel="icon" type="image/x-icon" href="file:///Users/sammi_cow/Desktop/git215/kwiatkowski_final/header-img.jpg">
+        <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/stkwiatk/kwiatkowski_final/project/header-img.jpg">
     </head>
     <body>
         <header>
@@ -25,7 +25,7 @@
             <section id="fusion">
                 <div class="image">
                   <aside>
-                    <img src="file:///Users/sammi_cow/Desktop/git215/kwiatkowski_final/header-img.jpg" alt="a plate of dumplings" width="800">
+                    <img src="https://raw.githubusercontent.com/stkwiatk/kwiatkowski_final/project/header-img.jpg" alt="a plate of dumplings" width="800">
                   </aside>
                 </div>
            
@@ -39,10 +39,10 @@
             <h3>Cater With Us</h3>
                   <p>We cater weddings, business lunches, dinners, and more. Call us to discuss how we can be a part of your next event.</p>
               <h3>Local Cuisine</h3>
-                       <img src="file:///Users/sammi_cow/Desktop/git215/kwiatkowski_final/local.jpg" alt="A dish of green rolls on a black plate" width="1000">
+                       <img src="https://raw.githubusercontent.com/stkwiatk/kwiatkowski_final/project/local.jpg" alt="A dish of green rolls on a black plate" width="1000">
                           <p>We refuse to compromise on quality. Our fresh ingredients are local and we are committed to serving fresh cuisine.</p>
                   <h3>Chef Ly</h3>
-                      <img src="file:///Users/sammi_cow/Desktop/git215/kwiatkowski_final/chef.jpg" alt="a chef flipping noodles into the air" width="1000">
+                      <img src="https://raw.githubusercontent.com/stkwiatk/kwiatkowski_final/project/chef.jpg" alt="a chef flipping noodles into the air" width="1000">
                       <p>With 20 years of experience cooking in the finest restaurants, Chef Ly is committed to serving fresh food and unique experiences.</p>
                </section>
           
